--- a/about.html
+++ b/about.html
@@ -137,7 +137,7 @@
         </div>
         <div id="cta-div">
           <div id="contactBtn">
-            <a href="contact.html"
+            <a href="strategy-session.html"
               ><button>
                 claim your free 30-minute strategy session now!
               </button></a
