--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </div>
       <div id="nav-part--3">
         <div id="contactBtn">
-          <a href="contact.html"><button>free strategy!</button></a>
+          <a href="strategy-session.html"><button>free strategy!</button></a>
         </div>
       </div>
     </div>
@@ -100,7 +100,7 @@
             the market!
           </h3>
           <div id="contactBtn">
-            <a href="contact.html"
+            <a href="strategy-session.html"
               ><button>claim your free strategy session now!</button></a
             >
           </div>
@@ -111,15 +111,15 @@
       </div>
       <div id="problems" class="container">
         <h1>
-          Frustrated of being an average business in Pakistan with a website
-          that does not convert visitors into customers?
-          <span>( Worse if you don't have one! )</span>
+          Frustrated of being an average business in Pakistan with zero
+          knowledge on "how to market your business digitally and get more
+          sales?"
         </h1>
         <div id="problems-div">
           <div id="problems-part--1">
             <p>
-              Let me guess, you are looking for new ways to get more clients and
-              a way to beat your competition?
+              Let me guess, you are looking for new ways to get more customers
+              and a way to beat your competition?
             </p>
             <br />
             <p>
@@ -187,11 +187,22 @@
             <p>go <a href="pricing.html">here! ,and see by yourself.</a></p>
             <br /><br />
             <p>
-              Get a top-notch <span>"Brand Website"</span> that sets you apart.
-              Capture more leads, build your brand, and grow your market share.
-              Enjoy peace of mind and never again frustrate over getting more
-              sales with an optimized brand website that drives success and
-              boosts sales.
+              Now if you want us to personally guide you (for totally free!)
+              through the process of getting more sales and "how to market",
+              then just click on the button below to claim your free 30-minute
+              strategy session with our team to get a complete analysis of your
+              business and a roadmap that you can implement the moment you
+              recieve it to boost you sales and outstand everyone in he market.
+              <br /><br />
+              We will also help you create your <span>brand offer</span> that
+              only a "dumb person" would refuse! <br /><br />
+              Normally, salesman charge tens of thousands of rupees just for
+              this knowledge that i am giving out for free. Because I know how
+              it feels when you get beaten by your competition and struggle to
+              get sales. <br />
+              <br />
+              <span class="danger">Hurry up!</span> as we already have so many
+              customers and only two sessions per day.
             </p>
           </div>
           <div id="problems-part--2">
@@ -200,7 +211,7 @@
         </div>
         <div id="cta-div">
           <div id="contactBtn">
-            <a href="contact.html"
+            <a href="strategy-session.html"
               ><button>claim your free strategy session now!</button></a
             >
           </div>
@@ -276,7 +287,7 @@
           </div>
           <div id="cta-div">
             <div id="contactBtn">
-              <a href="contact.html"
+              <a href="strategy-session.html"
                 ><button>claim your free strategy session now!</button></a
               >
             </div>
@@ -329,7 +340,7 @@
         </div>
         <div id="cta-div">
           <div id="contactBtn">
-            <a href="contact.html"
+            <a href="strategy-session.html"
               ><button>claim your free strategy session now!</button></a
             >
           </div>
@@ -416,9 +427,9 @@
             </div>
             <div class="faq-answer" id="answer2">
               Getting started is easy! Simply
-              <a href="contact.html">book a consultation with us</a> to discuss
-              your project's main problems and goals, and we'll guide you
-              through the process.
+              <a href="strategy-session.html">book a consultation with us</a> to
+              discuss your project's main problems and goals, and we'll guide
+              you through the process.
             </div>
             <i class="faq-arrow fas fa-chevron-down"></i>
           </div>
