--- a/pricing.html
+++ b/pricing.html
@@ -65,7 +65,7 @@
       </div>
       <div id="nav-part--3">
         <div id="contactBtn">
-          <a href="contact.html"><button>free strategy!</button></a>
+          <a href="strategy-session.html"><button>free strategy!</button></a>
         </div>
       </div>
     </div>
@@ -200,7 +200,7 @@
               </h4>
 
               <div id="contactBtn">
-                <a href="contact.html"
+                <a href="strategy-session.html"
                   ><button>
                     claim your free 30-minute strategy session now!
                   </button></a
@@ -269,7 +269,7 @@
               </h4>
             </div>
             <div id="contactBtn">
-              <a href="contact.html"
+              <a href="strategy-session.html"
                 ><button>
                   claim your free 30-minute strategy session now!
                 </button></a
@@ -316,7 +316,7 @@
             </div>
           </div>
           <div id="contactBtn">
-            <a href="contact.html"
+            <a href="strategy-session.html"
               ><button>claim your free strategy session now!</button></a
             >
           </div>
@@ -370,7 +370,7 @@
 
           <div id="pricing-cta">
             <div id="contactBtn">
-              <a href="contact.html"
+              <a href="strategy-session.html"
                 ><button>
                   claim your free 30-minute strategy session now!
                 </button></a
@@ -405,8 +405,9 @@
           </h3>
           <br />
           <h2>
-            "How to destroy your competition without spending an extra rupee on
-            sales and marketing within 3 months."
+            "Exposed! The 4 steps to destroy your competition in Pakistan
+            without spending an extra rupee on sales and marketing within 3
+            months."
           </h2>
           <br />
           <h4>
@@ -422,7 +423,7 @@
           <br /><br />
           <div id="pricing-cta">
             <div id="contactBtn">
-              <a href="contact.html"
+              <a href="strategy-session.html"
                 ><button>
                   claim your free 30-minute strategy session now!
                 </button></a
