--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
     <div id="nav">
       <div id="nav-part--1">
         <div class="logo">
-          <img src="images/rumilogo.webp" alt="RUMIDEVELOPS" />
+          <a href="index.html">
+            <img src="images/logo.png" alt="RUMIDEVELOPS"
+          /></a>
         </div>
       </div>
       <input type="checkbox" id="navbar-active" />
@@ -513,7 +515,14 @@
       </div>
       <footer class="footer">
         <!-- Contact Information -->
-        <h1>rumidevelops</h1>
+        <a href="index.html">
+          <img
+            src="images/rumilogo.png"
+            alt="Rumidevelops"
+            width="300px"
+            height="100px"
+        /></a>
+        <br /><br />
         <p>
           <span>Contact Us:</span>
           <a href="mailto:rumihassaan@gmail.com">rumihassaan@gmail.com</a> |
