--- a/works.html
+++ b/works.html
@@ -28,7 +28,9 @@
     <div id="nav">
       <div id="nav-part--1">
         <div class="logo">
-          <img src="images/rumilogo.webp" alt="RUMIDEVELOPS" />
+          <a href="index.html">
+            <img src="images/logo.png" alt="RUMIDEVELOPS"
+          /></a>
         </div>
       </div>
       <input type="checkbox" id="navbar-active" />
@@ -66,7 +68,7 @@
       </div>
       <div id="nav-part--3">
         <div id="contactBtn">
-          <a href="contact.html"><button>free strategy!</button></a>
+          <a href="strategy-session.html"><button>free strategy!</button></a>
         </div>
       </div>
     </div>
@@ -186,47 +188,48 @@
             </div>
           </div>
         </div>
-        <footer class="footer">
-          <!-- Contact Information -->
-          <h1>rumidevelops</h1>
-          <p>
-            <span>Contact Us:</span>
-            <a href="mailto:rumihassaan@gmail.com">rumihassaan@gmail.com</a> |
-            <a href="tel:+923343107014">03343107014</a> |
-            <a href="tel:+923343871030">03343871030</a>
-          </p>
-
-          <!-- Social Media Links -->
-          <p class="socials">
-            <a
-              href="https://www.linkedin.com/in/hassaan-rumi/"
-              target="_blank"
-              class="icon"
-            >
-              <i class="fa-brands fa-linkedin"></i>
-            </a>
-            <a
-              href="https://www.instagram.com/hassaan_rumi/"
-              target="_blank"
-              class="icon"
-            >
-              <i class="fa-brands fa-instagram"></i>
-            </a>
-            <a
-              href="https://github.com/gitwithrumi"
-              target="_blank"
-              class="icon"
-            >
-              <i class="fa-brands fa-github"></i>
-            </a>
-          </p>
-
-          <!-- Copyright Notice -->
-          <p class="copyright">
-            &copy; 2024 rumidevelops. All rights reserved.
-          </p>
-        </footer>
       </section>
+      <footer class="footer">
+        <!-- Contact Information -->
+        <a href="index.html">
+          <img
+            src="images/rumilogo.png"
+            alt="Rumidevelops"
+            width="300px"
+            height="100px"
+        /></a>
+        <br /><br />
+        <p>
+          <span>Contact Us:</span>
+          <a href="mailto:rumihassaan@gmail.com">rumihassaan@gmail.com</a> |
+          <a href="tel:+923343107014">03343107014</a> |
+          <a href="tel:+923343871030">03343871030</a>
+        </p>
+
+        <!-- Social Media Links -->
+        <p class="socials">
+          <a
+            href="https://www.linkedin.com/in/hassaan-rumi/"
+            target="_blank"
+            class="icon"
+          >
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+          <a
+            href="https://www.instagram.com/hassaan_rumi/"
+            target="_blank"
+            class="icon"
+          >
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+          <a href="https://github.com/gitwithrumi" target="_blank" class="icon">
+            <i class="fa-brands fa-github"></i>
+          </a>
+        </p>
+
+        <!-- Copyright Notice -->
+        <p class="copyright">&copy; 2024 rumidevelops. All rights reserved.</p>
+      </footer>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
