--- a/strategy-session.html
+++ b/strategy-session.html
@@ -42,7 +42,14 @@
 
       <footer class="footer">
         <!-- Contact Information -->
-        <h1>rumidevelops</h1>
+        <a href="index.html">
+          <img
+            src="images/rumilogo.png"
+            alt="Rumidevelops"
+            width="300px"
+            height="100px"
+        /></a>
+        <br /><br />
         <p>
           <span>Contact Us:</span>
           <a href="mailto:rumihassaan@gmail.com">rumihassaan@gmail.com</a> |
