--- a/about.html
+++ b/about.html
@@ -88,14 +88,15 @@
           <div id="about-intro--1">
             <h1>Hi!👋 I'm Hassaan Rumi, the founder of Rumidevelops.</h1>
             <h3>
-              In early 2023, I started selling my services online but faced
-              challenges with low sales and few clients. I realized "the problem
-              was my website", which wasn't converting visitors into buyers.
+              In early 2023, I ventured into selling my services online but
+              faced challenges with low sales and few clients. I quickly
+              realized "the problem was my website", which wasn't converting
+              visitors into buyers.
               <br /><br />
-              After reading numerous books on marketing and sales, I developed
-              the "brand website script" that now brings in more sales than I
-              could have imagined. <br />This experience inspired me to help
-              other small businesses overcome similar challenges.
+              After diving into numerous books on marketing and sales, I
+              developed the "brand website script" that now brings in more sales
+              than I could have imagined. This transformation inspired me to
+              help other small businesses overcome similar challenges.
             </h3>
           </div>
           <div id="about-intro--2">
@@ -105,9 +106,8 @@
         <div id="about-mission">
           <h1>Our Mission</h1>
           <h4>
-            At Rumidevelops, we believe that growing a business online should be
+            At Rumidevelops, we believe growing a business online should be
             simple. Every small business should have the opportunity to thrive.
-            <br />
             Our mission is to help small Pakistani businesses market their
             products and services with a clear message and build effective brand
             websites.
@@ -130,7 +130,8 @@
             business make us different. <br />
             We work tirelessly to ensure your website drives results and helps
             your business grow. <br />Apart from that we offer
-            <a href="pricing.html">100% money back guarantee!</a>
+            <a href="pricing.html">100% money back guarantee!</a> If you’re not
+            satisfied, you don’t pay a single rupee.
             <br />
             Join us and see the difference we can make.
           </h4>
