--- a/pricing.html
+++ b/pricing.html
@@ -76,8 +76,11 @@
       <div id="pricing">
         <div id="pricing-header" class="container">
           <h1>
-            We guarantee to boost your sales by turning your website visitors
-            into your dream customers, or you don't pay us a single rupee!
+            <span
+              >" We guarantee to boost your sales or you pay us nothing! "</span
+            >
+            <br />turning your website visitors into your dream customers, or
+            you don't pay us a single rupee!
           </h1>
           <h3>
             And... I also guarantee that no one else in Pakistan is making an
@@ -162,43 +165,38 @@
 
             <div id="standard-price">
               <h4>
-                Now let's come to the pricing, normally large organizations
-                charge lakhs if not tens of lakhs for what i am providing.
+                Now let's come to the pricing, Typically, large organizations
+                charge lakhs for what we provide. But at Rumidevelops, we’re
+                different. We guarantee that your brand website will convert
+                visitors into customers, or you get your money back—no questions
+                asked!
               </h4>
               <h4>
-                And, as i told you before as my promise if your brand website
-                does not convert visitors into customers either "you take all
-                the money back (no questions asked)" OR "we work again on your
-                website (for free) making sure it sells."
-              </h4>
-              <h4>
-                But you can avail this offer till 3 months after I have created
-                your brand website.
+                Alternatively, we'll work on your website for free until it
+                sells. You can avail this offer for up to 3 months after we
+                create your brand website.
               </h4>
               <h4>And the moment you have been waiting for is here...</h4>
               <h4>
                 Here is our shockingly crazy offer's price: only
                 <span>Rs 50,000</span>
               </h4>
-              <h4>But hey! don't worry if you can't afford it.</h4>
               <h4>
-                We provide easy installment plans because we know our market and
-                understand their pain.
+                Worried about the cost? No problem! We offer easy installment
+                plans because we understand our market and your pain points.
               </h4>
+              <h4>Here's how it works:</h4>
+              <h4>⚫ Pay <span>Rs 10,000</span> upfront.</h4>
               <h4>
-                As the process of creating your brand script, designing the
-                site, developing and debugging/speed checking would normally
-                take 3 months or more...
-              </h4>
-              <h4>
-                So how about this, you pay <span>Rs 10,000</span> upfront and
-                then pay the rest of the money after everything is done.
+                ⚫ Pay the rest after we’ve completed your brand script,
+                designed your site, developed, debugged, and optimized it. The
+                entire process usually takes about 3 months.
               </h4>
               <h4>Sounds great? I know it does😉.</h4>
               <h4>
                 So just click on the button below to claim your free 30-minute
-                strategy session with our team to see if we would be a good fit
-                for your needs.
+                strategy session with our team. Let’s see if we’re the perfect
+                fit to take your business to the next level.
               </h4>
 
               <div id="contactBtn">
@@ -286,10 +284,19 @@
               <h1>1.</h1>
               <h2>We help you plan your website</h2>
               <p>
-                Once you hop on a free consultation call with us, we'll question
-                you everything about your business and then give you a
-                customized plan and price of your brand website and also help
-                you to market your business in an efficient way.
+                Hop on a call with us, and we’ll dive deep into understanding
+                your business. We’ll ask all the right questions to tailor a
+                plan just for you.
+              </p>
+              <br />
+              <p>
+                We provide a customized website plan and quote that fits your
+                needs perfectly. No guesswork, just clear and precise solutions.
+              </p>
+              <br />
+              <p>
+                We don’t just build websites; we also guide you on how to market
+                your business efficiently. Let’s make your brand shine!
               </p>
               <i class="fa-solid fa-phone"></i>
             </div>
@@ -297,11 +304,18 @@
               <h1>2.</h1>
               <h2>We write words that sell</h2>
               <p>
-                Once we get all the information needed of your business, then
-                we'll write words customized for your business to sell your
-                product/service to your ideal customers by using storybrand
-                framework ( a very useful tool to convert small businesses into
-                well-recognized brand ).
+                We gather all the crucial details about your business and craft
+                words that resonate with your ideal customers.
+              </p>
+              <br />
+              <p>
+                Our approach utilizes the powerful StoryBrand framework,
+                transforming your small business into a well-recognized brand.
+              </p>
+              <br />
+              <p>
+                The right words can make all the difference. We ensure your
+                message converts visitors into loyal customers!
               </p>
               <i class="fa-solid fa-bullseye"></i>
             </div>
@@ -309,18 +323,33 @@
               <h1>3.</h1>
               <h2>We design & develop it beautifully</h2>
               <p>
-                After writing the words that sell, we will then design your
-                brand website and if you like the design then we will develop
-                it. We will test that everything is working fine and also do SEO
-                for your website and then host it for you.
+                After crafting the perfect words, we design your brand website.
+                If you love the design, we move to the next step.
+              </p>
+              <br />
+              <p>
+                We develop your site, rigorously test everything to ensure it
+                works perfectly, and optimize it with top-notch SEO.
+              </p>
+              <br />
+              <p>
+                Finally, we host your website, making sure it’s live and ready
+                to impress your customers.
               </p>
               <i class="fa-solid fa-code"></i>
             </div>
           </div>
-          <div id="contactBtn">
-            <a href="strategy-session.html"
-              ><button>claim your free strategy session now!</button></a
-            >
+          <div id="cta-div">
+            <div id="contactBtn">
+              <a href="strategy-session.html"
+                ><button>claim your free strategy session now!</button></a
+              >
+            </div>
+            <div id="pricingBtn">
+              <a href="pricing.html">
+                <button>see our pricing</button>
+              </a>
+            </div>
           </div>
         </div>
         <div id="pricing-footer" class="container">
@@ -329,25 +358,22 @@
           </h4>
           <br />
           <h4>
-            let me tell you this, we are making this offer because this is the
-            start of our journey and we'll be doing crazy stuff that no other
-            web agency or company is providing at the time.
+            Let me tell you—it’s because we’re just starting our journey and
+            we're committed to doing crazy, unparalleled stuff that no other web
+            agency or company is offering right now.
           </h4>
           <br />
-          <h4>
-            Just to get more customers. And we won't be provding this much at
-            this low price after january 2025. So act soon!
-          </h4>
+          <h4>This incredible offer ends in January 2025, so act fast!</h4>
           <br />
           <h4>
-            But hey! Before you go anywhere let me tell you that in order to
-            avail this crazy offer you should already have these two things:
+            But wait, before you rush to grab this, make sure you already have
+            these two things:
           </h4>
           <br />
           <h3>
             1. Any kind of marketing, social media branding or ads or anything
-            for pulling traffic on your website, because "if there is no visitor
-            how will we be able to convert them into buyers".
+            for pulling traffic on your website, because lets face it "if there
+            is no visitor how can we convert them into buyers".
           </h3>
           <br />
           <h3>
@@ -365,8 +391,8 @@
           <br />
           <h4>
             So, what now? If you meet the above qualifications than go here and
-            book in a free 30-minute strategy session with our team to see if we
-            would be a good fit.
+            book in a free 30-minute strategy session with our team. Let’s see
+            if we’re the perfect match to take your business to new heights.
           </h4>
           <br /><br />
 
