--- a/index.html
+++ b/index.html
@@ -85,21 +85,24 @@
     <div id="main">
       <div id="home">
         <div id="home-part--1">
-          <h1>WE CREATE BRAND WEBSITES FOR <span>SMALL BUSINESSES.</span></h1>
+          <h1>
+            UNLEASH YOUR SALES POTENTIAL WITH A HIGH-CONVERTING BRAND WEBSITE!
+          </h1>
           <h3>
-            We understand that growing a business is
-            <span class="internal-problem">hard</span> and competing with the
-            big dawgs of the market is a
-            <span class="internal-problem">headache</span>. We will create your
-            <span> brand website </span> and enhance your marketing material,
-            offering solutions that will help you in
-            <span>transforming your business into a well-recognized brand</span>
-            while
-            <span>skyrocketing your sales by up to 200%</span>. <br /><br />
-            Plus, with our <a href="pricing.html">100% money-back guarantee</a>,
-            if you don't see the results you want, we'll fully refund you.
-            Invest in your success with confidence and let us help you dominate
-            the market!
+            Are you tired of seeing your business struggle while the big players
+            dominate the market? We're here to change that! At RumiDevelops, we
+            specialize in creating stunning brand websites and supercharging
+            your marketing materials. Our unique solutions will transform your
+            business into a well-recognized brand and
+            <span class="internal-problem"
+              >skyrocket your sales by up to 200%!</span
+            >
+            <br /><br />
+            And here's the best part: we offer a
+            <a href="pricing.html">100% money-back guarantee</a>. If you don't
+            see the results you want, we'll refund every rupee. Take the leap
+            with us, invest in your success, and watch your business thrive like
+            never before!
           </h3>
           <div id="contactBtn">
             <a href="strategy-session.html"
@@ -113,77 +116,91 @@
       </div>
       <div id="problems" class="container">
         <h1>
-          Frustrated of being an average business in Pakistan with zero
-          knowledge on "how to market your business digitally and get more
-          sales?"
+          TIRED OF BEING AN AVERAGE BUSINESS IN PAKISTAN? DISCOVER "HOW TO BOOST
+          YOUR SALES DIGITALLY!"
         </h1>
         <div id="problems-div">
           <div id="problems-part--1">
             <p>
-              Let me guess, you are looking for new ways to get more customers
-              and a way to beat your competition?
+              Let me guess, you're looking for new ways to get more customers
+              and beat your competition.
             </p>
             <br />
             <p>
-              And, you are thinking that "I would get more customers only if I
-              could get more traffic/visitors to my site and more eye balls on
-              my offer."
+              And you might be thinking, "If I had more visitors to my site, I'd
+              get more customers."
             </p>
             <p>
               But here's the truth, most people don't have a traffic problem.
             </p>
             <br />
+            <p>the real deal is...</p>
+            <br />
             <p>They have a <span>"conversion problem"</span>.</p>
             <p>You see, there is no shortage of traffic online.</p>
-            <p>There are literally 1.8 billion active users on facebook.</p>
+            <p>
+              There are literally 1.8 billion active users on facebook alone.
+            </p>
             <p>And you can buy as much traffic as you want.</p>
             <br />
-            <p>So, "where's the problem?"</p>
+            <p>So, "what's the problem?"</p>
             <p>ok let's go.</p>
             <p>here's the problem:</p>
             <br />
             <p>
-              The problem is the rate at which you <span>CONVERT</span> that
-              traffic into leads,sales or customers.
+              The real issue is how well you
+              <span class="daanger">turn</span> those visitors into leads,
+              sales, or loyal customers.
             </p>
             <br />
-            <p>But where there is a problem, there is always a solution.</p>
-            <p>here's the solution:</p>
+            <p>But every problem has a solution.</p>
+            <p>Here's yours:</p>
             <br />
             <p>
-              You need a <span>super sales person</span>, who works day and
-              night, 24/7 to bring in leads/sales/customers.
-            </p>
-            <br />
-            <p>
-              This person is far more cheaper and effective than any other
-              marketing.
-            </p>
-            <br />
-            <p>And... this person is known as: <span>"Brand Website!"</span></p>
-            <p>
-              All you need is a <span>Brand Website</span> which looks good and
-              converts <span>visitors into buyers!</span>
+              Imagine having a <span>superstar salesperson</span> who works
+              24/7, converting visitors into customers.
             </p>
             <br />
             <p>
-              And you just have to pay this
-              <span>super sales person</span> once! And
-              <span
-                >"It will do the work of getting you more and more sales day and
-                night for free afterwards!"</span
-              >
+              This champion costs less and works better than any other marketing
+              strategy.
             </p>
             <br />
+            <p>
+              And... this champion is known as: <span>"Brand Website!"</span>
+            </p>
+            <p>
+              All you need is a <span>Brand Website</span> that looks great and
+              turns <span>visitors into buyers!</span>
+            </p>
+            <br />
+            <p>
+              Picture this: Your Brand Website, working day and night, turning
+              visitors into paying customers <span>while you sleep.</span>
+            </p>
+            <br />
+            <p>
+              The best part? You only pay for this superstar once! Then, it
+              keeps bringing in sales day and night, without any extra cost!
+            </p>
+            <br /><br />
+            <p>
+              It's like having an employee who never takes a break and never
+              asks for a raise. Interested? You should be! This is the
+              <span>secret weapon</span> your business needs. Ready to let your
+              website do the hard work? Let’s make it happen!
+            </p>
+            <br /><br />
             <p>
               And now, I will give you an offer that you
               <span class="danger">"can't refuse!"</span>
             </p>
             <p>here it is...</p>
             <br /><br />
+            <h3>UNBELIEVABLE OFFER: "SKYROCKET YOUR SALES OR PAY NOTHING!"</h3>
             <h3>
-              "WE GUARANTEE TO BOOST YOUR SALES BY TURNING YOUR WEBSITE VISITORS
-              INTO YOUR DREAM CUSTOMERS, OR YOU DON'T PAY US A SINGLE RUPEE!"
+              "Transform Your Website Visitors into Loyal Customers -
+              Guaranteed, or It's FREE!"
             </h3>
             <p>Excited to see what's in the offer?</p>
             <p>go <a href="pricing.html">here! ,and see by yourself.</a></p>
@@ -194,7 +211,8 @@
               then just click on the button below to claim your free 30-minute
               strategy session with our team to get a complete analysis of your
               business and a roadmap that you can implement the moment you
-              recieve it to boost you sales and outstand everyone in he market.
+              recieve it to boost your sales and outstand everyone in the
+              market.
               <br /><br />
               We will also help you create your <span>brand offer</span> that
               only a "dumb person" would refuse! <br /><br />
@@ -242,13 +260,14 @@
               <p>
                 Most web agencies ask their clients to provide content for the
                 website, which can be the <span>hardest part</span> of creating
-                a brand website.
+                a website.
               </p>
               <br />
               <p>
-                We do things <span>differently</span>. We first discuss your
-                business in detail and then create the best content for your
-                website. This ensures your site not only looks great but also
+                We do things <span>differently</span>. We first deep dive into
+                understanding your business and then craft the best content for
+                your website. This ensures your site not only looks great but
+                also
                 <span> converts visitors into customers.</span>
               </p>
             </div>
@@ -309,10 +328,19 @@
             <h1>1.</h1>
             <h2>We help you plan your website</h2>
             <p>
-              Once you hop on a free consultation call with us, we'll question
-              you everything about your business and then give a customized plan
-              and price of your brand website and also help you to market your
-              business in an efficient way.
+              Hop on a call with us, and we’ll dive deep into understanding your
+              business. We’ll ask all the right questions to tailor a plan just
+              for you.
+            </p>
+            <br />
+            <p>
+              We provide a customized website plan and quote that fits your
+              needs perfectly. No guesswork, just clear and precise solutions.
+            </p>
+            <br />
+            <p>
+              We don’t just build websites; we also guide you on how to market
+              your business efficiently. Let’s make your brand shine!
             </p>
             <i class="fa-solid fa-phone"></i>
           </div>
@@ -320,11 +348,18 @@
             <h1>2.</h1>
             <h2>We write words that sell</h2>
             <p>
-              Once we get all the information needed of your business, then
-              we'll write words customized for your business to sell your
-              product/service to your ideal customers by using storybrand
-              framework ( a very useful tool to convert small businesses into
-              well-recognized brand ).
+              We gather all the crucial details about your business and craft
+              words that resonate with your ideal customers.
+            </p>
+            <br />
+            <p>
+              Our approach utilizes the powerful StoryBrand framework,
+              transforming your small business into a well-recognized brand.
+            </p>
+            <br />
+            <p>
+              The right words can make all the difference. We ensure your
+              message converts visitors into loyal customers!
             </p>
             <i class="fa-solid fa-bullseye"></i>
           </div>
@@ -332,10 +367,18 @@
             <h1>3.</h1>
             <h2>We design & develop it beautifully</h2>
             <p>
-              After writing the words that sell, we will then design your brand
-              website and if you like the design then we will develop it. We
-              will test that everything is working fine and also do SEO for your
-              website and then host it for you.
+              After crafting the perfect words, we design your brand website. If
+              you love the design, we move to the next step.
+            </p>
+            <br />
+            <p>
+              We develop your site, rigorously test everything to ensure it
+              works perfectly, and optimize it with top-notch SEO.
+            </p>
+            <br />
+            <p>
+              Finally, we host your website, making sure it’s live and ready to
+              impress your customers.
             </p>
             <i class="fa-solid fa-code"></i>
           </div>
