--- a/works.html
+++ b/works.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Get more sales with our brand websites or receive a full refund. We offer a 100% money-back guarantee. Our unique approach includes writing the words for your website, helping you stand out and become a recognized brand."
+      content="Get more sales with our brand website development services. We offer a 100% money-back guarantee. Our unique website development approach includes writing the words for your website, helping you stand out and become a recognized brand."
     />
     <meta
       name="keywords"
-      content="rumidevelops, Animated modern website, growing business online!, Outstanding brand website"
+      content="rumidevelops, brand website, 100% money back guarantee, grow you business with a brand website"
     />
     <meta name="robots" content="works, follow" />
-    <title>RUMIDEVELOPS - WORKS</title>
+    <title>Website Development Services In Pakistan for Small Businesses</title>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
@@ -29,7 +29,7 @@
       <div id="nav-part--1">
         <div class="logo">
           <a href="index.html">
-            <img src="images/logo.png" alt="RUMIDEVELOPS"
+            <img src="images/logo.webp" alt="RUMIDEVELOPS"
           /></a>
         </div>
       </div>
@@ -193,7 +193,7 @@
         <!-- Contact Information -->
         <a href="index.html">
           <img
-            src="images/rumilogo.png"
+            src="images/rumilogo.webp"
             alt="Rumidevelops"
             width="300px"
             height="100px"
