--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <div id="home">
         <div id="home-part--1">
           <h1>
-            UNLEASH YOUR SALES POTENTIAL WITH A HIGH-CONVERTING BRAND WEBSITE!
+            UNLEASH YOUR SALES POTENTIAL WITH A HIGH CONVERTING BRAND WEBSITE!
           </h1>
           <h3>
             Are you tired of seeing your business struggle while the big players
@@ -131,6 +131,8 @@
         </div>
         <div id="home-part--2">
           <img
+            height="300px"
+            width="300px"
             src="images/happy-man.webp"
             alt="a happy business man after getting more sales and growing his company."
           />
